--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <div class="container">
-        <img src="img/profile.png" alt="Profile Picture" class="profile-picture">
-        <h1 class="name">Hi! I am Renmark</h1>
+        <img src="profile.jpg" alt="Profile Picture" class="profile-picture">
+        <h1 class="name">Hi! I am APOLLO CENIZAL</h1>
         <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam optio officiis, animi velit, in amet distinctio ad porro illum accusantium soluta ipsa molestias sequi. Quas tenetur in voluptates tempora architecto reiciendis? Dolore et dolorum saepe voluptate repellendus sapiente, quaerat enim impedit esse soluta. Assumenda, magni. Reprehenderit ratione saepe fugit possimus mollitia repellat nobis cum! Deserunt tenetur accusantium, rem iure, laborum animi alias blanditiis asperiores, sed beatae voluptatem laudantium molestiae reiciendis reprehenderit eius enim corrupti eveniet? Qui pariatur amet neque fugit accusamus est sint laudantium magni error, magnam ratione corrupti corporis, nemo dicta hic, adipisci iusto aliquid nulla asperiores aperiam possimus.</p>
         
         <a href="https://www.facebook.com/senseihatakekakashi" target="_blank" class="social-link">
-            <img src="img/facebook.png" alt="Social Icon" class="social-icon">
-            <span>https://www.facebook.com/senseihatakekakashi</span>
+            <img src="facebook.png" alt="Social Icon" class="social-icon">
+            <span>https://www.facebook.com/paul.jimenez.56808</span>
         </a>
     </div>
 </body>
